--- a/Stopwatch1.css
+++ b/Stopwatch1.css
@@ -1,6 +1,9 @@
 body {
     height: 100vh;
-    background: url(Media/checkered..webp) no-repeat center center/cover;
+    background: url(Media/background2.png) no-repeat;
+    background-position: center center;
+    background-size: 100% auto;
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -9,17 +12,15 @@ body {
 /* the area containing both timer and buttons together */
 .container{
 
-    width: 60%;
+    width: 60%; 
     height: 250px;
-    background-color: rgb(135, 64, 17);
     border-radius: 30px;
     box-shadow: 0 0 3px;
 }
 
 /* onlythe timer region  */
 #timer{
-    color: aliceblue;
-    /* width: 100%; */
+    
     font-size: 72px;
     text-align: center;
     margin: 0px auto;
@@ -29,7 +30,7 @@ body {
 /* the enitre button region(including stsrt,stop,reset) */
 .buttons{
     text-align: center;
-    /* margin-top: 40px; */
+    margin-top: 10px;
 }
 
 button{
@@ -40,21 +41,21 @@ button{
 button i{
     font-size: 2rem;
     padding: 12px;
-    /* color: aliceblue; */
+    color: rgb(3, 8, 12);
     width: 50px;
 }
 
 /* start button  */
 #start{
-    background-color: rgb(20, 93, 20);
+    background-color: rgb(73, 3, 25);
 }
 
 /* reset button  */
 #reset{
-    background-color: rgb(176, 117, 8);
+    background-color: rgb(73, 3, 25);
 }
 
 /* stop button  */
 #stop{
-    background-color: rgb(170, 4, 4);
+    background-color: rgb(73, 3, 25);
 }
